# mips_payments

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
mips_payments/: hooks.py  modules.txt
mips_payments/mips_payments/doctype/mips_settings/: mips_settings.js  mips_settings.json  mips_settings.py  test_mips_settings.py
mips_payments/templates/includes/: mips_checkout.js
mips_payments/templates/pages/: mips_checkout.html  mips_checkout.py
