[project]
name = "mips_payments"
authors = [
    { name = "Navari Ltd", email = "solutions@navari.co.ke"}
]
description = "MIPS payments integration with ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[tool.isort]
profile = "black"
known_frappe = "frappe"
known_erpnext = "erpnext"
known_payments = "payments"
no_lines_before = ["ERPNEXT"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FRAPPE", "ERPNEXT", "PAYMENTS", "FIRSTPARTY", "LOCALFOLDER"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
pre-commit = "~=3.7.1"
flake8 = "~=7.1.0"
